I think I fixed the nav sticky on small

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,19 @@
   height: 50px;
   width: 100%;
 }
+
+.title-bar {
+  width: 100%;
+}
+
+
+.sticky {
+  position: absolute;
+  z-index: 0;
+  transform: translate3d(0, 0, 0);
+}
+
+.sticky.is-stuck {
+  position: fixed;
+  z-index: 5;
+}
